common/app/assets/stylesheets/module/content/_media.global.scss
.content--media {

    .byline,
    .content__dateline,
    .social-wrapper--aside,
    .content__meta-container,
    .ad-slot--paid-for-badge--article,
    .commentcount {
        border-color: $c-neutral2;
    }

    .content__dateline {
        color: $c-neutral3;
    }

    .commentcount.tone-colour {
        color: $c-commentAccent2;

        &:hover {
            color: $c-commentAccent2;
        }

        i {
            @include icon(comment-commentaccent);
        }
    }

    .content__head__comment-count {
        display: none;
    }

    @include mq($until: desktop) {
        .meta__comment-count--top,
        .meta__comment-count--bottom {
            .commentcount {
                border-top: 0;
            }
            .commentcount__label {
                display: none;
            }
        }
    }

    .player {
        margin-bottom: $gs-baseline/2;
    }

    .gu-media-wrapper {
        margin-bottom: 0;
    }

    .social-wrapper--bottom {
        @include mq(leftCol) {
            display: none;
        }
    }

    .social-icon-wrapper {
        opacity: .8;

        &:hover,
        &:focus {
            opacity: 1;

            .social-icon {
                border-color: #ffffff;
            }
        }
    }

    .social-icon {
        overflow: visible; // opacity cuts borders off on chrome otherwise
    }

    .content__headline:before {
        content: '';
        display: inline-block;
        height: .65em;
        margin-right: .3em;
    }

    .social-wrapper--bottom {
        max-width: none;
    }

    $video-most-viewed-container: 525px;
    $audio-most-viewed-container: 358px;

    .content__main-column--video {
        @include mq(rightCol) {
            min-height: $video-most-viewed-container;
        }
    }
    .content__main-column--audio {
        @include mq(rightCol) {
            min-height: $audio-most-viewed-container;
        }
    }
    .content__secondary-column--media {
        @include mq($until: rightCol) {
            display: block;
            position: relative;
            width: 100%;
            max-width: gs-span(9);
            margin: $gs-baseline*2 auto 0;
        }
        @include mq(rightCol) {
            padding-left: $gs-gutter/2;
            border-left: 1px solid $c-neutral2;
        }
    }
    .content__secondary-column--video {
        @include mq(rightCol) {
            height: $video-most-viewed-container;
        }
    }
    .content__secondary-column--audio {
        @include mq(rightCol) {
            height: $audio-most-viewed-container;
        }
    }
}
.content__headline:before {
    .content--media--audio & {
        width: .8em;
        @include icon(volume-high-white, $with-width: false);
    }
    .content--media--video & {
        width: 1.04em;
        @include icon(video-icon-white, $with-width: false);
    }
    .content--gallery & {
        width: .9em;
        @include icon(camera-white-large, $with-width: false);
    }
}


/* Media item
   ========================================================================== */

.items--media {
    .item {
        position: relative;
        float: left;
        width: 50%;
        @include box-sizing(border-box);
        margin-bottom: $gs-baseline*2;
        padding-left: $gs-gutter/2;
        padding-right: $gs-gutter/2;

        .item__container {
            margin-top: -$gs-baseline;
            border-top: 1px solid $c-mediaDefault;
        }
    }
    .item__action {
        display: block;
        padding-top: $gs-baseline;
        color: $c-neutral5;

        &:hover,
        &:focus {
            text-decoration: underline;
        }
        &:visited,
        &:active {
            color: darken($c-neutral5, 20%);
        }
    }
    .item__img {
        margin-bottom: $gs-baseline/3;
    }
    .item__title {
        @include fs-headline(1);
        text-align: left; //Required for end slate items
        @include text-clamp(3, get-line-height(headline, 1));
        height: get-line-height(headline, 1) * 3;

        &:before {
            display: inline-block;
            content: '';
            margin-right: $gs-gutter/5;
            height: 10px;
        }
    }
}


/* Most viewed container
   ========================================================================== */

.most-viewed-container--media {
    padding-top: $gs-baseline*2;

    @include mq(tablet) {
        padding-top: 0;
        border-top: 1px solid $c-mediaDefault;
    }
    .most-viewed-container__header {
        height: gs-height(1) + $gs-baseline;
    }
    .most-viewed-container__heading {
        @include fs-header(2);
        position: relative;
        top: $gs-baseline/4;
    }
}
.most-viewed--media {
    margin-left: -$gs-gutter/2;
    margin-right: -$gs-gutter/2;

    .item {
        @include mq($until: tablet) {
            &:nth-child(odd) {
                border-right: 1px solid $c-neutral2;
            }
        }
        @include mq(tablet, rightCol) {
            width: 33.3%;

            &:nth-child(-n+3) {
                .item__container {
                    border-top: 0;
                }
            }
            &:nth-child(3n-1),
            &:nth-child(3n-2) {
                border-right: 1px solid $c-neutral2;
            }
        }
        @include mq(rightCol) {
            &:nth-child(-n+2) {
                .item__container {
                    border-top: 0;
                }
            }
            &:nth-child(odd) {
                border-right: 1px solid $c-neutral2;
            }
            &:nth-child(n+5) {
                margin-bottom: 0;
            }
        }
    }
    .item__title {
        @include text-clamp(3, get-line-height(headline, 1));
        height: get-line-height(headline, 1) * 3;
    }
}
.most-viewed--video .item:nth-child(n+5) {
    @include mq($until: tablet) {
        margin-bottom: 0;
    }
    @include mq(rightCol) {
        margin-bottom: 0;
    }
}
.most-viewed--audio {
    .item:nth-child(n+3) {
        @include mq($until: tablet) {
            margin-bottom: 0;
        }
        @include mq(rightCol) {
            margin-bottom: 0;
        }
    }
    .item:nth-child(4) {
        @include mq(tablet, rightCol) {
            display: none;
        }
    }
}

.content--video {
    @include mq(tablet, rightCol) {
        .content__meta-container {
            float: left;
            width: 404px; //Magic, as video items below are off grid at 33.3% width
            margin-right: $gs-gutter;
            margin-bottom: $gs-baseline*2;
        }
        .social-wrapper--bottom {
            float: right;
            width: 192px;
        }
    }

    .social-wrapper {
        border-top: 1px dotted $c-neutral2;
        padding-top: 0;

        &:before {
            content: 'Share this page';
            @include fs-data(3);
            color: $c-neutral3;
            margin-top: $gs-baseline/4;
        }

        .social {
            padding-top: $gs-baseline/3;
        }

        .social__head {
            display: none;
        }
    }

    .content__meta-container {
        border-bottom: 0;
    }
}

.content__main-column--media .content__main-column__body a { /* Fix for video pages tag link underlines */
    text-decoration: none;
}

